--- a/cognito/pom.xml
+++ b/cognito/pom.xml
@@ -50,7 +50,7 @@
         </dependency>
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
-            <artifactId>apache-client</artifactId>
+            <artifactId>url-connection-client</artifactId>
             <scope>runtime</scope>
         </dependency>
     </dependencies>
