--- a/lambda-cognito/pom.xml
+++ b/lambda-cognito/pom.xml
@@ -57,7 +57,7 @@
         </dependency>
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
-            <artifactId>apache-client</artifactId>
+            <artifactId>url-connection-client</artifactId>
         </dependency>
 
         <dependency>
