--- a/pom.xml
+++ b/pom.xml
@@ -201,7 +201,7 @@
             </dependency>
             <dependency>
                 <groupId>software.amazon.awssdk</groupId>
-                <artifactId>apache-client</artifactId>
+                <artifactId>url-connection-client</artifactId>
                 <version>${awssdk.version}</version>
                 <scope>runtime</scope>
             </dependency>
