--- a/server/pom.xml
+++ b/server/pom.xml
@@ -101,7 +101,7 @@
 
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
-            <artifactId>apache-client</artifactId>
+            <artifactId>url-connection-client</artifactId>
         </dependency>
 
         <dependency>
