--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -36,11 +36,12 @@ gwt.dynamodb.table-name=boardgamefiesta-prod
 bgf.sqs.listen=false
 %dev.bgf.sqs.listen=true
 bgf.sqs.queue-url=https://sqs.eu-west-1.amazonaws.com/598172618529/boardgamefiesta-prod
-%dev.bgf.sqs.queue-url=https://sqs.eu-west-1.amazonaws.com/598172618529/boardgamefiesta-dev
+%dev.bgf.sqs.queue-url=https://sqs.eu-west-1.amazonaws.com/598172618529/boardgamefiesta-dev-automa-AutomaSqsQueue-bDHUzWvh1I8n
 
 bgf.ws.server.enabled=false
 %dev.bgf.ws.server.enabled=true
-bgf.ws.connections-endpoint=https://5479own0ue.execute-api.eu-west-1.amazonaws.com/production
+bgf.ws.connections-endpoint= https://hh0oxy3dh7.execute-api.eu-west-1.amazonaws.com/default/
+%dev.bgf.ws.connections-endpoint=https://qe4z09d2n7.execute-api.eu-west-1.amazonaws.com/default
 
 bgf.url=https://boardgamefiesta.com
 bgf.from=info@boardgamefiesta.com
