--- a/lambda-cognito/pom.xml
+++ b/lambda-cognito/pom.xml
@@ -54,6 +54,13 @@
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>cognitoidentityprovider</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>software.amazon.awssdk</groupId>
+                    <artifactId>apache-client</artifactId>
+                    <!-- Excluded because we have software.amazon.awssdk:url-connection-client already on the classpath -->
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
