--- a/lambda-rest/pom.xml
+++ b/lambda-rest/pom.xml
@@ -122,6 +122,13 @@
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>apigatewaymanagementapi</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>software.amazon.awssdk</groupId>
+                    <artifactId>apache-client</artifactId>
+                    <!-- Excluded because we have software.amazon.awssdk:url-connection-client already on the classpath -->
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
