--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -30,8 +30,8 @@ quarkus.oidc.authentication.scopes=openid
 %dev.quarkus.oidc.auth-server-url=https://cognito-idp.eu-west-1.amazonaws.com/eu-west-1_s6Ypfd935
 %dev.quarkus.oidc.client-id=376e8rt8oopbqs5k5h2mnvl0nl
 
-gwt.dynamodb.table-name=boardgamefiesta-prod
-%dev.gwt.dynamodb.table-name=boardgamefiesta-dev
+bgf.dynamodb.table-name=boardgamefiesta-prod
+%dev.bgf.dynamodb.table-name=boardgamefiesta-dev
 
 bgf.sqs.listen=false
 %dev.bgf.sqs.listen=true
