--- a/dynamodb-generic/pom.xml
+++ b/dynamodb-generic/pom.xml
@@ -40,6 +40,11 @@
                     <artifactId>apache-client</artifactId>
                     <!-- Excluded because we have software.amazon.awssdk:url-connection-client already on the classpath -->
                 </exclusion>
+                <exclusion>
+                    <groupId>software.amazon.awssdk</groupId>
+                    <artifactId>netty-nio-client</artifactId>
+                    <!-- Excluded because we have software.amazon.awssdk:url-connection-client already on the classpath -->
+                </exclusion>
             </exclusions>
         </dependency>
     </dependencies>
