--- a/aws/ws.yaml
+++ b/aws/ws.yaml
@@ -100,7 +100,7 @@ Resources:
   WsApi:
     Type: AWS::ApiGatewayV2::Api
     Properties:
-      DisableExecuteApiEndpoint: true
+      DisableExecuteApiEndpoint: false # Must be false for execute-api:ManageConnections to work
       Name: !Sub 'boardgamefiesta-${Environment}-websocket-api'
       Description: 'Board Game Fiesta WebSocket API'
       ProtocolType: WEBSOCKET
@@ -174,6 +174,7 @@ Resources:
       ApiId: !Ref WsApi
       StageName: 'default'
 
+# TODO Force redeployment on stack update
   WsApiDeployment:
     Type: AWS::ApiGatewayV2::Deployment
     DependsOn:
