Cleanup, tweak memory

--- a/aws/apigw.yaml
+++ b/aws/apigw.yaml
@@ -66,10 +66,10 @@ Resources:
     Type: AWS::Lambda::Function
     Properties:
       Handler: io.quarkus.amazon.lambda.runtime.QuarkusStreamHandler::handleRequest
-      MemorySize: 2048
+      MemorySize: 1024
       Role: !GetAtt ApiRole.Arn
       Runtime: java11
-      Timeout: 60
+      Timeout: 30
       Environment:
         Variables:
           QUARKUS_PROFILE: !Sub '${Environment}'
@@ -107,18 +107,7 @@ Resources:
   RestApiDomainName:
     Type: AWS::ApiGateway::DomainName
     Properties:
-      DomainName: !If [ IsProduction, 'api2.boardgamefiesta.com', !Sub 'api-${Environment}.boardgamefiesta.com' ]
-      EndpointConfiguration:
-        Types:
-          - REGIONAL
-      RegionalCertificateArn: 'arn:aws:acm:eu-west-1:598172618529:certificate/3a61edbf-a6b3-4090-bbfd-2298ac3ad7aa'
-
-  RestApiDomainName2:
-    # TODO Merge with RestApiDomainName; was needed for migrating from ECS backend at api.boardgamefiesta.com to backend on API Gateway
-    Type: AWS::ApiGateway::DomainName
-    Condition: IsProduction
-    Properties:
-      DomainName: 'api.boardgamefiesta.com'
+      DomainName: !If [ IsProduction, 'api.boardgamefiesta.com', !Sub 'api-${Environment}.boardgamefiesta.com' ]
       EndpointConfiguration:
         Types:
           - REGIONAL
@@ -133,17 +122,6 @@ Resources:
       AliasTarget:
         DNSName: !GetAtt RestApiDomainName.RegionalDomainName
         HostedZoneId: !GetAtt RestApiDomainName.RegionalHostedZoneId
-
-  RecordSet2:
-    Type: AWS::Route53::RecordSet
-    Condition: IsProduction
-    Properties:
-      HostedZoneName: 'boardgamefiesta.com.'
-      Name: !Ref RestApiDomainName2
-      Type: A
-      AliasTarget:
-        DNSName: !GetAtt RestApiDomainName2.RegionalDomainName
-        HostedZoneId: !GetAtt RestApiDomainName2.RegionalHostedZoneId
 
   StatsResource:
     Type: AWS::ApiGateway::Resource
@@ -247,17 +225,6 @@ Resources:
     Properties:
       BasePath: ''
       DomainName: !Ref RestApiDomainName
-      RestApiId: !Ref RestApi
-      Stage: 'default'
-
-  RestApiBasePathMapping2:
-    Type: AWS::ApiGateway::BasePathMapping
-    Condition: IsProduction
-    DependsOn:
-      - RestApiDeployment
-    Properties:
-      BasePath: ''
-      DomainName: !Ref RestApiDomainName2
       RestApiId: !Ref RestApi
       Stage: 'default'
 
