--- a/game/src/main/resources/application.properties
+++ b/game/src/main/resources/application.properties
@@ -16,5 +16,5 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
-bgf.games.enabled=big-bazar,gwt,gwt2
-%dev.bgf.games.enabled=big-bazar,ds,gwt,gwt2
+bgf.games.enabled=big-bazar,ds,gwt,gwt2
+#%dev.bgf.games.enabled=big-bazar,ds,gwt,gwt2
